#=======================================================================================================================
cmake_minimum_required(VERSION 3.30)
#=======================================================================================================================
project(MulletEngine)
#=======================================================================================================================
add_subdirectory(libraries)
#=======================================================================================================================
add_subdirectory(code)
#=======================================================================================================================